blue_deployment/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-blue-deployment
  namespace: blue
  labels:
    app: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "1.0.0"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: "1.0.0"
    spec:
      containers: 
        - name: hello-world-blue
          image:  kmgoddard/bgapp:1.4 
          #jmbharathram/myapp:bgdemoapp.v1.0
          ports:

            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  namespace: blue  
  name: hello-world-blue-service
spec:
  
  selector:
    app: "1.0.0"
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
